--- a/SDLBase.vcxproj
+++ b/SDLBase.vcxproj
@@ -155,14 +155,20 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Map.cpp" />
     <ClCompile Include="TextureManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h" />
+    <ClInclude Include="GameObject.h" />
+    <ClInclude Include="Map.h" />
     <ClInclude Include="TextureManager.h" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="assets\enemy.png" />
+    <Image Include="assets\player.png" />
     <Image Include="assets\squid.png" />
     <Image Include="assets\test.bmp" />
   </ItemGroup>
